add img and paragraph div

--- a/index.html
+++ b/index.html
@@ -27,19 +27,22 @@
       <div class="balance">
         <h2>Your Weight</h2>
         <img src="img/balance.svg" alt="">
-        <input type="text" class="weight-input" placeholder="Weight">
+        <input type="text" class="weight-input" placeholder="Weight(kg)">
       </div>
       <div class="measuring">
         <h2>Your Height</h2>
         <img src="img/measuring-tape.svg" alt="">
-        <input type="text" class="height-input" placeholder="Height">
+        <input type="text" class="height-input" placeholder="Height(cm)">
       </div>
+    </div>
+    <div class="result">
+      <img class="result-img">
+      <p class="result-text"></p>
     </div>
 
     <div class="btn-wrapper">
       <button class="btn">Calculate</button>
     </div>
-    <div class="result"></div>
   </div>
 
   <script src="js/script.js"></script>
